@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.502 2009-05-08 01:05:10 guru Exp $
+	$Id: ChangeLog,v 1.503 2009-05-08 04:17:35 guru Exp $
 -----------------------------------------------------------------------------------------
 
 2009-05-07	pwessel
@@ -7,6 +7,8 @@
 				Sutherland/Hodgman algorithm that handles curved boundaries.
 	* gmt_io.c:		GMT_DATADIR can now be a list of directories, separated by colons
 				or semi-colons (Windows).
+	* mgd77list.c:		Used wrong time for IGRF calculation; worst case off by 1 year.
+	* mgd77manage.c:	---"---
 				
 2009-05-06	pwessel
 	* *.c,txt,tex:		While remaining backwards compatible, we no longer announce that
